<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg02"
    android:orientation="vertical"
    tools:context=".aty.MainActivity">

    <!--标题栏-->
    <RelativeLayout
        android:id="@+id/rl_wrapper_title_layout_fg_on_line_work"
        style="@style/TitleBg"
        android:clickable="false">

        <include
            android:id="@+id/in_go_back_menu_layout_aty_cloud_question_bank"
            layout="@layout/layout_v_go_back_menu" />

        <include
            android:id="@+id/in_title_layout_aty_cloud_question_bank"
            layout="@layout/layout_v_title_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_006"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_wrapper_chapter_layout_aty_cloud_question_bank"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_005">

                <ImageView
                    android:layout_width="@dimen/dp_015"
                    android:layout_height="@dimen/dp_015"
                    android:background="@drawable/ic_launcher"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_004"
                    android:clickable="false"
                    android:padding="@dimen/dp_005"
                    android:text="@string/chapter"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/sp_007" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_wrapper_examination_point_layout_aty_cloud_question_bank"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_005">

                <ImageView
                    android:layout_width="@dimen/dp_015"
                    android:layout_height="@dimen/dp_015"
                    android:background="@drawable/ic_launcher"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_004"
                    android:clickable="false"
                    android:text="@string/examination_point"
                    android:textColor="@color/color_text_content"
                    android:textSize="@dimen/sp_007" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_wrapper_coiling_layout_aty_cloud_question_bank"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_005">

                <ImageView
                    android:layout_width="@dimen/dp_015"
                    android:layout_height="@dimen/dp_015"
                    android:background="@drawable/ic_launcher"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_004"
                    android:clickable="false"
                    android:text="@string/coiling"
                    android:textColor="@color/color_text_content"
                    android:textSize="@dimen/sp_007" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wrapper_cursor_layout_aty_cloud_question_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0px"
                android:layout_height="@dimen/dp_002"
                android:layout_weight="3.3"
                android:background="@color/theme" />

            <View
                android:layout_width="0px"
                android:layout_height="@dimen/dp_002"
                android:layout_weight="3.3"
                android:background="@android:color/white" />

            <View
                android:layout_width="0px"
                android:layout_height="@dimen/dp_002"
                android:layout_weight="3.3"
                android:background="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_006"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_switch_teaching_material_layout_aty_cloud_question_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_004"
            android:clickable="false"
            android:padding="@dimen/dp_006"
            android:text="切换"
            android:textColor="@color/orange01"
            android:textSize="@dimen/sp_007" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_004"
            android:layout_toLeftOf="@id/tv_switch_teaching_material_layout_aty_cloud_question_bank"
            android:clickable="false"
            android:paddingLeft="@dimen/dp_008"
            android:paddingTop="@dimen/dp_006"
            android:paddingRight="@dimen/dp_006"
            android:paddingBottom="@dimen/dp_006"
            android:text="高中/语文/人教版/必修一/"
            android:textColor="@color/color_text_title"
            android:textSize="@dimen/sp_008" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/expandable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:cacheColorHint="#00000000"
        android:divider="@color/bg02"
        android:dividerHeight="@dimen/dp_001"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:listSelector="#00000000" />

</LinearLayout>